# nextbit_computers

./: # Create escrow  .gitignore  README.md  cookies.txt  docker-compose.yml  escrow.rs
backend/catalogue/: Dockerfile.dev  TECHNICIAN_PORTAL_README.md  auth_utils.py  requirements.txt
backend/gateway/: Cargo.toml  Dockerfile.dev
backend/gateway/gateway-app/: Cargo.toml
backend/gateway/gateway-app/migrations/: 20260419193959_init.sql  20260419193960_devices.sql  20260500000000_create_stub_users_orders.sql  20260501000000_escrow.sql  20260502000001_wallet.sql  20260503000000_daraja_escrow.sql
backend/gateway/gateway-app/src/: auth.rs  daraja_escrow.rs  main.rs  models.rs  mywallet.rs  redis_helpers.rs  state.rs
backend/gateway/gateway-app/src/daraja/: account_balance.rs  b2c.rs  c2b.rs  mod.rs  query_org.rs  tax_remittance.rs  transaction_status.rs
backend/gateway/gateway-app/src/handlers/: alerts.rs  assets.rs  auth.rs  daraja_escrow.rs  debug.rs  device.rs  escrow.rs  health.rs  mod.rs  mywallet.rs  probe.rs  proxy.rs  scan.rs  version.rs  ws.rs  ws_technician.rs
backend/gateway/gateway-app/src/middleware/: auth.rs
backend/gateway/gateway-app/src/models/: daraja_escrow.rs  escrow.rs  probe.rs  wallet.rs
backend/gateway/gateway-app/src/routes/: b2b.rs  daraja_escrow.rs  escrow.rs  mod.rs  mywallet.rs  probe.rs  wallet.rs
backend/gateway/gateway-app/src/services/: device.rs  escrow.rs  escrow_api.rs  fee.rs  flutterwave.rs  mod.rs  mongo_scan.rs  scan.rs  wallet.rs
backend/ml-service/: .env.example  Dockerfile.dev  (+4 more)
frontend/: README.md  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  server.ts  tsconfig.json
(+706 files in other folders)
