[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum            = { version = "0.7", features = ["ws", "multipart", "macros"] }
axum-extra      = { version = "0.9", features = ["typed-header"] }
tower-http      = { version = "0.5", features = ["cors", "trace"] }
tokio           = { version = "1", features = ["full"] }
aya             = { version = "0.13", features = ["async_tokio"] }
aya-log         = "0.2"
sqlx            = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "bigdecimal", "macros"] }
mongodb         = "3.5"
# Redis
#deadpool-redis  = { version = "0.22", features = ["tls-rustls-webpki-roots"] }
redis           = { version = "=0.27.6", features = ["tls-native-tls"] }
url             = "2"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
uuid            = { version = "1", features = ["v4", "serde"] }
chrono          = { version = "0.4", features = ["serde"] }
anyhow          = "1"
dotenvy         = "0.15"
futures-util    = "0.3"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9"
bcrypt = "0.15"
reqwest = { version = "0.12", features = ["json"] }
bytes = "1"
hyper = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }


thiserror   = "1"
hmac        = "0.12"
sha2        = "0.10"
hex         = "0.4"
once_cell   = "1.18"
 